--- a/bootstrap intro/main.css
+++ b/bootstrap intro/main.css
@@ -9,3 +9,36 @@
 .BGdarkest {
 	background: #333;
 }
+
+body{
+	background:#999;
+	font-family: arial;
+}
+
+h1, h3 {
+	color: #555;
+}
+
+a {
+	color: black;
+}
+
+li {
+	color: #333;
+}
+
+p {
+	background: #666;
+	color: white;
+	padding: 12px;
+}
+
+.darker {
+	background: #000;
+
+}
+
+h2.titlestart {
+	border: 1px solid red;
+	padding-top: 20px;
+}
