--- a/bootstrap intro/css/main.css
+++ b/bootstrap intro/css/main.css
@@ -7,5 +7,58 @@
 }
 
 .BGdarkest {
-	background: #333;
+	background: #222;
 }
+
+body{
+	background:#999;
+	font-family: arial;
+}
+
+h1, h3 {
+	color: #555;
+}
+
+a {
+	color: black;
+}
+
+li {
+	color: #333;
+}
+
+p {
+	background: #666;
+	color: white;
+	padding: 12px;
+	text-align: center;
+}
+
+.darker {
+	background: #333;
+	border-radius: 5px;/*make rounded corners*/
+	padding: 10px 10px 10px 10px;
+	width: 50%;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+
+	/*text-align center;*/
+}
+
+h2.titlestart {
+	border: 1px solid red;
+	padding: 25px 0px 20px 0px;
+}
+h2 {text-align: center;}
+
+.center {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 50%;
+  }
+
+  p.UCUdark {
+	border-radius: 5px;
+  }
