Fixing nav bar back to black

--- a/bootstrap intro/css/main.css
+++ b/bootstrap intro/css/main.css
@@ -59,6 +59,10 @@ p {
 	/*text-align center;*/
 }
 
+.nav-item{
+	color: black;
+}
+
 h2.titlestart {
 	border: 1px solid red;
 	padding: 25px 0px 20px 0px;
@@ -93,6 +97,22 @@ h2 {text-align: center;}
 	float: left;
 	margin: 0.5%;
 	width: 30%;/*each of the columns take up 33%
+	(so in total take up whole width)
+	can use % for width, margin etc. if it goes over 100%
+	it will just keep wrapping around
+	USE PERCENTAGE CHANGES if you want it to look nice
+	on all devices and all sized browsers*/
+}
+
+.colhalf {
+	background: #333;
+	border-radius: 5px;/*make rounded corners*/
+	/*padding: 10px 5px;*/
+	padding: 10px 5px;
+	color: white;
+	float: left;
+	margin: 0.5%;
+	width: 48%;/*each of the columns take up 33%
 	(so in total take up whole width)
 	can use % for width, margin etc. if it goes over 100%
 	it will just keep wrapping around
