--- a/bootstrap intro/css/main.css
+++ b/bootstrap intro/css/main.css
@@ -85,6 +85,14 @@ h2 {text-align: center;}
 	width: 40%;
   }
 
+
+  .centersmall {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 30%;
+  }
+
   p.UCUdark {
 	border-radius: 5px;
   }
