--- a/css/main.css
+++ b/css/main.css
@@ -136,4 +136,13 @@ use this if i wanted to do an id
 }
 
 
+img.rounded-corners {
+	border-radius: 30px;
+  }
 
+  .socialLinks a {
+    font-size: 35px;
+    margin: 0 10px 0 0;
+    color: #000000;
+    text-decoration: none;
+}
