--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@ p {
 }
 
 h2.titlestart {
-	border: 1px solid red;
+	/*border: 1px solid red;*/
 	padding: 30px 0px 20px 0px;
 }
 h2 {text-align: center;}
