Organized and vertically centered information on contact page and also added an image instead of the socials part. removed collabs from nav bar of all pages until it has something on it worth having. some small other changes

--- a/css/main.css
+++ b/css/main.css
@@ -157,3 +157,23 @@ img.rounded-corners {
 h1.darkercolor{
 	color: black;
 }
+
+.contactandsocials{
+	background-color: black;
+	margin-top: 5px;
+	display: flex;
+	vertical-align: middle;
+}
+
+.center-vertically {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	min-height: 100vh;
+  }
+
+div.form-group{
+	text-align: left;
+}
