Changed links in benjis, starting to add fa social links to the albums for both UCU albums

--- a/css/main.css
+++ b/css/main.css
@@ -99,8 +99,8 @@ h2 {text-align: center;}
 	border-radius: 5px;
   }
 
-.pb-3 {
-	
+.middle{
+	align-items: center;
 }
 .row{
 	padding: 20px 20px 20px 20px;
